--- a/css/styles.css
+++ b/css/styles.css
@@ -222,3 +222,56 @@ ul {
 }
 
 /* --- END FOOTER --- */
+
+/* --- PORTFOLIO --- */
+
+.portfolio-btn-list {
+}
+
+.portfolio-btn-item {
+}
+
+.portfolio-btn {
+	display: block;
+
+	border-radius: 4px;
+	border: none;
+
+	font-family: inherit;
+	font-size: 16px;
+	line-height: 1.625;
+	font-weight: 500;
+	background-color: #f5f4fa;
+}
+
+.portfolio-btn:hover,
+.portfolio-btn:focus {
+	box-shadow: 0 4px 1px 0px RGB(0, 0, 0, 10%), 0 1px 2px 0px RGB(0, 0, 0, 8%),
+		0 2px 2px 0px RGB(0, 0, 0, 12%);
+	background-color: var(--accent-color);
+	color: #ffffff;
+}
+
+.portfolio-list {
+}
+
+.portfolio-item {
+}
+
+.portfolio-img {
+}
+
+.portfolio-name {
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 2;
+	letter-spacing: 0.06em;
+}
+
+.portfolio-desc {
+	font-size: 16px;
+	line-height: 1.875;
+	color: var(--secondary-color);
+}
+
+/* --- END PORTFOLIO --- */
