--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 :root {
+	--main-text: 'Roboto', sans-serif;
+	--logo-text: 'Raleway', sans-serif;
 	--main-color: #212121;
 	--secondary-color: #757575;
 	--accent-color: #2196f3;
@@ -8,7 +10,7 @@
 /* --- COMMON --- */
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: var(--main-text);
 	font-size: 14px;
 	font-weight: 400;
 	letter-spacing: 0.03em;
@@ -36,7 +38,7 @@ ul {
 }
 
 .logo {
-	font-family: 'Raleway', sans-serif;
+	font-family: var(--logo-text);
 	font-size: 26px;
 	font-weight: 700;
 }
@@ -127,6 +129,7 @@ ul {
 	border-radius: 4px;
 	border: none;
 	box-shadow: 0 4px 4px RGB(0, 0, 0, 15%);
+	cursor: pointer;
 
 	font-family: inherit;
 	font-size: 16px;
@@ -236,6 +239,7 @@ ul {
 
 	border-radius: 4px;
 	border: none;
+	cursor: pointer;
 
 	font-family: inherit;
 	font-size: 16px;
