--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,10 @@
 	--secondary-color: #757575;
 	--accent-color: #2196f3;
 	--bg-color: #2f303a;
+	--bg-color-minor: #f5f4fa;
 }
 
-/* --- COMMON --- */
+/* --------------------- COMMON --------------------- */
 
 body {
 	font-family: var(--main-text);
@@ -42,11 +43,25 @@ img {
 }
 
 .container {
-	width: 1200px;
+	width: 1170px;
 	padding: 0 15px;
 	margin: 0 auto;
 
-	border: 1px dashed rgb(255, 0, 230);
+	/* border: 1px dashed rgb(255, 0, 230); */
+}
+
+.visually-hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
 }
 
 .logo {
@@ -72,6 +87,9 @@ img {
 }
 
 .section-title {
+	padding-bottom: 50px;
+
+	text-align: center;
 	font-size: 36px;
 	font-weight: 700;
 }
@@ -87,9 +105,9 @@ img {
 .header-address-link:focus {
 	color: var(--accent-color);
 }
-/* --- END COMMON --- */
+/* --------------------- END COMMON --------------------- */
 
-/* --- HEADER --- */
+/* --------------------- HEADER --------------------- */
 
 .header {
 	border: 1px solid blue;
@@ -101,8 +119,8 @@ img {
 	align-items: center;
 }
 
-.nav {
-}
+/* .nav {
+} */
 
 .nav-list {
 	display: flex;
@@ -147,15 +165,21 @@ img {
 .header-address-link:not(:last-child) {
 	margin-right: 40px;
 }
-/* --- END HEADER --- */
+/* --------------------- END HEADER --------------------- */
 
-/* --- HERO --- */
+/* --------------------- HERO --------------------- */
 
 .hero {
+	padding: 200px 0;
+
 	background-color: var(--bg-color);
 }
 
+/* .hero > .container {
+} */
+
 .hero-title {
+	padding: 0 237px;
 	text-align: center;
 
 	font-size: 44px;
@@ -167,14 +191,14 @@ img {
 
 .hero-btn {
 	display: block;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 30px auto 0;
+	padding: 0;
 
 	width: 200px;
 	height: 50px;
 	border-radius: 4px;
 	border: none;
-	box-shadow: 0 4px 4px RGB(0, 0, 0, 15%);
+	box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
 	cursor: pointer;
 
 	font-family: inherit;
@@ -191,65 +215,105 @@ img {
 	background-color: #188ce8;
 }
 
-/* --- END HERO --- */
+/* --------------------- END HERO --------------------- */
 
-/* --- ADVANTAGES --- */
+/* --------------------- ADVANTAGES --------------------- */
+
+.advantages {
+	padding: 94px 0;
+}
 
 .advantages-list {
+	display: flex;
+	/* padding: 94px 0; */
 }
 
 .advantages-item {
+	width: 270px;
+}
+
+.advantages-item:not(:last-child) {
+	margin-right: 30px;
 }
 
 .advantages-name {
+	padding-bottom: 10px;
+
 	font-size: inherit;
 	font-weight: 700;
 }
 
 .advantages-text {
-	line-height: 1.714;
+	line-height: 1.715;
 	color: var(--secondary-color);
 }
 
-/* --- END ADVANTAGES --- */
+/* --------------------- END ADVANTAGES --------------------- */
 
-/* --- SERVICES --- */
+/* --------------------- SERVICES --------------------- */
+
+.services {
+	padding-bottom: 94px;
+}
 
 .services-list {
+	display: flex;
 }
 
 .services-item {
 }
 
+.services-item:not(:last-child) {
+	margin-right: 30px;
+}
+
 .services-img {
 }
 
-/* --- END SERVICES --- */
+/* --------------------- END SERVICES --------------------- */
 
-/* --- TEAM --- */
+/* --------------------- TEAM --------------------- */
+
+.team {
+	padding: 94px 0;
+	background: var(--bg-color-minor);
+}
 
 .team-list {
+	display: flex;
+	justify-content: space-between;
 }
 
 .team-item {
+	border-radius: 0 0 4px 4px;
+
+	background-color: #ffffff;
+	box-shadow: 0 1px 3px 0 RGB(0, 0, 0, 12%), 0 1px 1px 0 RGB(0, 0, 0, 14%),
+		0 2px 1px 0 RGB(0, 0, 0, 20%);
 }
 
 .team-img {
 }
 
 .team-name {
+	margin: 30px 0 10px;
+
+	text-align: center;
 	font-size: 16px;
 	font-weight: 500;
 }
 
 .team-desc {
+	margin-bottom: 30px;
+
+	text-align: center;
 	font-size: 16px;
 	color: var(--secondary-color);
 }
 
-/* --- END TEAM --- */
+/* --------------------- END TEAM --------------------- */
 
-/* --- FOOTER --- */
+/* --------------------- FOOTER --------------------- */
 
 .footer {
 	background-color: var(--bg-color);
@@ -270,9 +334,9 @@ img {
 	color: var(--secondary-color);
 }
 
-/* --- END FOOTER --- */
+/* --------------------- END FOOTER --------------------- */
 
-/* --- PORTFOLIO --- */
+/* --------------------- PORTFOLIO --------------------- */
 
 .portfolio-btn-list {
 }
@@ -324,4 +388,4 @@ img {
 	color: var(--secondary-color);
 }
 
-/* --- END PORTFOLIO --- */
+/* --------------------- END PORTFOLIO --------------------- */
