--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,11 @@ img {
 .hero {
 	padding: 200px 0;
 
-	background-color: var(--bg-color);
+	background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+		url(../images/hero/desktop/hero.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 1600px;
 }
 
 .hero-title {
