--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 	--design-black-color: #000000;
 	--icon-color: #afb1b8;
 	--accent-color: #2196f3;
+	--portfolio-item-color: #eeeeee;
 	--bg-color: #2f303a;
 	--bg-color-minor: #f5f4fa;
 }
@@ -115,6 +116,10 @@ img {
 	display: flex;
 }
 
+.nav-item {
+	position: relative;
+}
+
 .nav-item:not(:last-child) {
 	margin-right: 50px;
 }
@@ -134,6 +139,20 @@ img {
 
 .nav-link-current {
 	color: var(--accent-color);
+}
+
+.nav-link-current::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+
+	display: block;
+	width: 100%;
+	height: 4px;
+	border-radius: 2px;
+
+	background-color: var(--accent-color);
 }
 
 .header-address {
@@ -560,9 +579,9 @@ img {
 .portfolio-desc-wrap {
 	padding: 20px 24px;
 
-	border-right: 1px solid #eeeeee;
-	border-bottom: 1px solid #eeeeee;
-	border-left: 1px solid #eeeeee;
+	border-right: 1px solid var(--portfolio-item-color);
+	border-bottom: 1px solid var(--portfolio-item-color);
+	border-left: 1px solid var(--portfolio-item-color);
 }
 
 .portfolio-name {
