--- a/css/styles.css
+++ b/css/styles.css
@@ -302,15 +302,28 @@ img {
 	display: flex;
 }
 
-/* .services-item {
-} */
+.services-item {
+	position: relative;
+}
 
 .services-item:not(:last-child) {
 	margin-right: 30px;
 }
 
-/* .services-img {
-} */
+.services-desc {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+
+	width: 370px;
+	height: 70px;
+	padding: 27px 0;
+
+	background-color: rgb(47, 48, 58, 0.8);
+	color: var(--design-white-color);
+	text-align: center;
+	text-transform: uppercase;
+}
 
 /* --------------------- END SERVICES --------------------- */
 
