--- a/css/styles.css
+++ b/css/styles.css
@@ -222,6 +222,9 @@ img {
 	width: 200px;
 	height: 50px;
 	border-radius: 4px;
+
+	background-color: var(--accent-color);
+	color: var(--design-white-color);
 	border: none;
 	box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
 	cursor: pointer;
@@ -231,8 +234,6 @@ img {
 	line-height: 1.875;
 	font-weight: 700;
 	letter-spacing: 0.06em;
-	background-color: var(--accent-color);
-	color: var(--design-white-color);
 }
 
 .hero-btn:hover,
@@ -534,6 +535,62 @@ img {
 
 /* --------------------- END FOOTER --------------------- */
 
+/* --------------------- MODAL --------------------- */
+
+.modal-backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+
+	width: 100%;
+	height: 100%;
+
+	background-color: rgb(0, 0, 0, 0.2);
+}
+
+.modal-backdrop.is-hidden {
+	opacity: 0;
+	pointer-events: none;
+}
+
+.modal-window {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	width: 528px;
+	height: 581px;
+	border-radius: 4px;
+
+	background-color: var(--design-white-color);
+}
+
+.modal-button {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	padding: 0;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+
+	background-color: var(--design-white-color);
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	cursor: pointer;
+}
+
+.modal-close-icon {
+	width: 18px;
+	height: 18px;
+}
+
+/* --------------------- END MODAL --------------------- */
+
 /* --------------------- PORTFOLIO --------------------- */
 
 .portfolio {
@@ -605,7 +662,6 @@ img {
 	padding: 24px;
 
 	opacity: 0;
-	/* overflow: scroll; */
 	overflow: hidden;
 	background-color: rgb(33, 150, 243, 0.9);
 }
