--- a/css/styles.css
+++ b/css/styles.css
@@ -561,24 +561,36 @@ img {
 	height: 100%;
 
 	background-color: rgb(0, 0, 0, 0.2);
+	opacity: 1;
+
+	transition: opacity 250ms var(--timing-fn);
 }
 
 .modal-backdrop.is-hidden {
-	opacity: 0;
 	pointer-events: none;
+
+	opacity: 0;
 }
 
 .modal-window {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
 
 	width: 528px;
 	height: 581px;
 	border-radius: 4px;
 
 	background-color: var(--design-white-color);
+	box-shadow: 0 1px 3px 0 rgb(0, 0, 0, 0.12), 0 1px 1px 0 rgb(0, 0, 0, 0.14),
+		0 2px 1px 0 rgb(0, 0, 0, 0.2);
+
+	transform: translate(-50%, -50%) scale(1);
+	transition: transform 250ms var(--timing-fn);
+}
+
+.modal-backdrop.is-hidden .modal-window {
+	transform: translate(-50%, -50%) scale(0.5);
 }
 
 .modal-button {
