--- a/css/styles.css
+++ b/css/styles.css
@@ -642,6 +642,7 @@ img {
 	width: 528px;
 	height: 581px;
 	border-radius: 4px;
+	padding: 40px;
 
 	background-color: var(--design-white-color);
 	box-shadow: 0 1px 3px 0 rgb(0, 0, 0, 0.12), 0 1px 1px 0 rgb(0, 0, 0, 0.14),
@@ -676,6 +677,104 @@ img {
 .modal-close-icon {
 	width: 18px;
 	height: 18px;
+}
+
+.modal-title {
+	margin-bottom: 30px;
+
+	font-size: 20px;
+	line-height: 1.15;
+	font-weight: 700;
+	text-align: center;
+}
+
+.modal-form-item {
+	position: relative;
+
+	margin-bottom: 28px;
+}
+
+.modal-input {
+	display: block;
+	padding: 11px 12px 11px 42px;
+
+	width: 100%;
+	border: 1px solid rgb(33, 33, 33, 20%);
+	border-radius: 4px;
+	outline: none;
+}
+
+.modal-label {
+	position: absolute;
+	top: 50%;
+	left: 42px;
+
+	display: block;
+
+	color: var(--secondary-color);
+	font-size: 12px;
+	line-height: 1.167;
+	letter-spacing: 0.01em;
+
+	transform: translateY(-50%);
+	transition: transform 250ms var(--timing-fn), color 250ms var(--timing-fn);
+}
+
+.modal-icon {
+	position: absolute;
+	top: 50%;
+	left: 12px;
+	transform: translateY(-50%);
+
+	fill: var(--main-color);
+
+	transition: fill 250ms var(--timing-fn);
+}
+
+.modal-input:focus {
+	border: 1px solid var(--accent-color);
+}
+
+.modal-input:focus ~ .modal-icon {
+	fill: var(--accent-color);
+}
+
+.modal-input:focus + .modal-label {
+	color: var(--accent-color);
+
+	transform: translate(-42px, -40px);
+}
+
+.modal-input:not(:placeholder-shown) + .modal-label {
+	transform: translate(-42px, -40px);
+}
+
+.modal-textarea {
+	display: block;
+	width: 100%;
+	height: 120px;
+	padding: 12px 16px;
+	resize: none;
+	border: 1px solid rgb(33, 33, 33, 20%);
+	border-radius: 4px;
+	outline: none;
+}
+
+.modal-textarea + .modal-label {
+	transform: translate(-42px, -80px);
+}
+
+.modal-textarea:focus {
+	border: 1px solid var(--accent-color);
+}
+
+.modal-textarea:placeholder-shown {
+	color: rgb(117, 117, 117, 50%);
+	letter-spacing: 0.01em;
+}
+
+.modal-textarea:focus + .modal-label {
+	color: var(--accent-color);
 }
 
 /* --------------------- END MODAL --------------------- */
