--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,8 @@ img {
 
 	font-weight: 500;
 	letter-spacing: 0.02em;
+
+	transition: color 250ms var(--timing-fn);
 }
 
 .nav-link:hover,
@@ -183,6 +185,8 @@ img {
 	letter-spacing: 0.02em;
 
 	color: var(--secondary-color);
+
+	transition: color 250ms var(--timing-fn);
 }
 
 .header-address-link:not(:last-child) {
@@ -250,6 +254,8 @@ img {
 	line-height: 1.875;
 	font-weight: 700;
 	letter-spacing: 0.06em;
+
+	transition: background-color 250ms var(--timing-fn);
 }
 
 .hero-btn:hover,
@@ -404,6 +410,8 @@ img {
 	border-radius: 50%;
 
 	color: var(--icon-color);
+
+	transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
 }
 
 .team-social-link:hover,
@@ -445,6 +453,8 @@ img {
 	border: 1px solid var(--icon-color);
 
 	color: var(--icon-color);
+
+	transition: color 250ms var(--timing-fn), border-color 250ms var(--timing-fn);
 }
 
 .clients-link:hover,
@@ -495,6 +505,8 @@ img {
 
 	line-height: 1.143;
 	color: var(--secondary-color);
+
+	transition: color 250ms var(--timing-fn);
 }
 
 .footer-address-link:hover,
@@ -535,6 +547,8 @@ img {
 
 	background-color: rgba(255, 255, 255, 0.1);
 	color: var(--design-white-color);
+
+	transition: background-color 250ms var(--timing-fn);
 }
 
 .footer-social-link:hover,
@@ -656,7 +670,7 @@ img {
 	transform: translate(-50%, -50%) scale(0.5);
 }
 
-.modal-button {
+.modal-close-button {
 	position: absolute;
 	top: 8px;
 	right: 8px;
@@ -669,14 +683,24 @@ img {
 	height: 30px;
 	border-radius: 50%;
 
+	color: var(--design-black-color);
 	background-color: var(--design-white-color);
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	cursor: pointer;
+
+	transition: color 250ms var(--timing-fn);
 }
 
 .modal-close-icon {
 	width: 18px;
 	height: 18px;
+
+	fill: currentColor;
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+	color: var(--accent-color);
 }
 
 .modal-title {
@@ -688,10 +712,18 @@ img {
 	text-align: center;
 }
 
+.modal-form-list {
+	margin-bottom: 20px;
+}
+
 .modal-form-item {
 	position: relative;
 
 	margin-bottom: 28px;
+}
+
+.modal-form-item:last-child {
+	margin-bottom: 0px;
 }
 
 .modal-input {
@@ -702,6 +734,8 @@ img {
 	border: 1px solid rgb(33, 33, 33, 20%);
 	border-radius: 4px;
 	outline: none;
+
+	transition: border-color 250ms var(--timing-fn);
 }
 
 .modal-label {
@@ -732,7 +766,7 @@ img {
 }
 
 .modal-input:focus {
-	border: 1px solid var(--accent-color);
+	border-color: var(--accent-color);
 }
 
 .modal-input:focus ~ .modal-icon {
@@ -757,7 +791,10 @@ img {
 	resize: none;
 	border: 1px solid rgb(33, 33, 33, 20%);
 	border-radius: 4px;
+
 	outline: none;
+
+	transition: border-color 250ms var(--timing-fn);
 }
 
 .modal-textarea + .modal-label {
@@ -775,6 +812,67 @@ img {
 
 .modal-textarea:focus + .modal-label {
 	color: var(--accent-color);
+}
+
+.modal-checkbox-label {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 30px;
+
+	line-height: 1.714;
+	color: var(--secondary-color);
+}
+
+.modal-checkbox-current {
+	margin-right: 8px;
+	border-radius: 2px;
+	border: 2px solid var(--main-color);
+
+	fill: var(--design-white-color);
+	background-color: var(--design-white-color);
+
+	transition: border-width 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
+}
+
+.modal-checkbox-initial:checked + .modal-checkbox-current {
+	border-width: 0px;
+
+	background-color: var(--accent-color);
+}
+
+.modal-btn-conditions {
+	padding: 0;
+	margin-left: 4px;
+	border: none;
+
+	color: var(--accent-color);
+	text-decoration: underline;
+	background-color: transparent;
+	cursor: pointer;
+}
+
+.modal-send-button {
+	display: block;
+	width: 200px;
+	height: 50px;
+	padding: 0;
+	margin: 0 auto;
+	border: none;
+	border-radius: 4px;
+
+	font-size: 16px;
+	line-height: 1.875;
+	letter-spacing: 0.06em;
+	color: var(--design-white-color);
+	background-color: var(--accent-color);
+
+	transition: background-color 250ms var(--timing-fn);
+}
+
+.modal-send-button:hover,
+.modal-send-button:focus {
+	background-color: var(--acc-color-hover);
 }
 
 /* --------------------- END MODAL --------------------- */
@@ -809,6 +907,9 @@ img {
 	line-height: 1.625;
 	font-weight: 500;
 	background-color: #f5f4fa;
+
+	transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn),
+		box-shadow 250ms var(--timing-fn);
 }
 
 .portfolio-btn:hover,
@@ -828,6 +929,8 @@ img {
 
 .portfolio-link {
 	display: block;
+
+	transition: box-shadow 250ms var(--timing-fn);
 }
 
 .portfolio-link:hover,
