--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 	--icon-color: #afb1b8;
 	--accent-color: #2196f3;
 	--acc-color-hover: #188ce8;
-	--portfolio-item-color: #eeeeee;
+	--projects-item-color: #eeeeee;
 	--bg-color: #2f303a;
 	--bg-color-minor: #f5f4fa;
 
@@ -79,18 +79,17 @@ img {
 	font-weight: 700;
 }
 
-.logo-top {
+.logo--top {
 	padding: 24px 0;
+
 	color: var(--design-black-color);
 }
 
-.logo-bottom {
-	display: block;
-
+.logo--bottom {
 	color: var(--design-white-color);
 }
 
-.logo-accent {
+.logo--accent {
 	color: var(--accent-color);
 }
 
@@ -102,31 +101,69 @@ img {
 	font-weight: 700;
 }
 
+.social {
+	display: flex;
+	justify-content: space-between;
+}
+
+.social__item {
+	width: 44px;
+	height: 44px;
+}
+
+.social__link {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+
+	color: var(--icon-color);
+	background-color: transparent;
+
+	transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
+}
+
+.social__link:hover,
+.social__link:focus {
+	color: var(--design-white-color);
+	background-color: var(--accent-color);
+}
+
+.social__icon {
+	width: 20px;
+	height: 20px;
+
+	fill: currentColor;
+}
+
 /* --------------------- END COMMON --------------------- */
 
 /* --------------------- HEADER --------------------- */
 
 .header > .container {
 	display: flex;
+	align-items: center;
 }
 
 .nav {
 	margin-left: 93px;
 }
 
-.nav-list {
+.nav__list {
 	display: flex;
 }
 
-.nav-item {
+.nav__item {
 	position: relative;
 }
 
-.nav-item:not(:last-child) {
+.nav__item:not(:last-child) {
 	margin-right: 50px;
 }
 
-.nav-link {
+.nav__link {
 	display: block;
 	padding: 32px 0;
 
@@ -136,16 +173,16 @@ img {
 	transition: color 250ms var(--timing-fn);
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.nav__link:hover,
+.nav-__ink:focus {
 	color: var(--accent-color);
 }
 
-.nav-link-current {
+.nav__link--current {
 	color: var(--accent-color);
 }
 
-.nav-link::after {
+.nav__link::after {
 	content: '';
 	position: absolute;
 	bottom: 0;
@@ -163,11 +200,11 @@ img {
 	transition: transform 250ms var(--timing-fn);
 }
 
-.nav-link:hover.nav-link::after {
+.nav__link:hover.nav__link::after {
 	transform: scale(1);
 }
 
-.nav-link-current::after {
+.nav__link--current::after {
 	transform: scale(1);
 }
 
@@ -176,7 +213,7 @@ img {
 	margin-left: auto;
 }
 
-.header-address-link {
+.header-address__link {
 	display: flex;
 	align-items: center;
 	padding: 32px 0;
@@ -189,23 +226,23 @@ img {
 	transition: color 250ms var(--timing-fn);
 }
 
-.header-address-link:not(:last-child) {
+.header-address__link:not(:last-child) {
 	margin-right: 40px;
 }
 
-.header-address-link:hover,
-.header-address-link:focus {
+.header-address__link:hover,
+.header-address__link:focus {
 	color: var(--accent-color);
 }
 
-.header-address-icon {
+.header-address__icon {
 	margin-right: 10px;
 
 	fill: currentColor;
 }
 
-.header-address-link:hover .header-address-icon,
-.header-address-link:focus .header-address-icon {
+.header-address__link:hover .header-address__icon,
+.header-address__link:focus .header-address__icon {
 	fill: currentColor;
 }
 
@@ -223,10 +260,10 @@ img {
 	background-size: 1600px;
 }
 
-.hero-title {
+.hero__title {
 	padding: 0 237px;
-	text-align: center;
 
+	text-align: center;
 	font-size: 44px;
 	line-height: 1.364;
 	font-weight: 900;
@@ -234,18 +271,17 @@ img {
 	color: var(--design-white-color);
 }
 
-.hero-btn {
+.hero__btn {
 	display: block;
 	margin: 30px auto 0;
 	padding: 0;
-
 	width: 200px;
 	height: 50px;
 	border-radius: 4px;
-
-	background-color: var(--accent-color);
-	color: var(--design-white-color);
 	border: none;
+
+	color: var(--design-white-color);
+	background-color: var(--accent-color);
 	box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
 	cursor: pointer;
 
@@ -258,8 +294,8 @@ img {
 	transition: background-color 250ms var(--timing-fn);
 }
 
-.hero-btn:hover,
-.hero-btn:focus {
+.hero__btn:hover,
+.hero__btn:focus {
 	background-color: var(--acc-color-hover);
 }
 
@@ -271,20 +307,19 @@ img {
 	padding: 94px 0;
 }
 
-.advantages-list {
+.advantages__list {
 	display: flex;
-	/* padding: 94px 0; */
 }
 
-.advantages-item {
+.advantages__item {
 	width: 270px;
 }
 
-.advantages-item:not(:last-child) {
+.advantages__item:not(:last-child) {
 	margin-right: 30px;
 }
 
-.advantages-wrap {
+.advantages__wrap {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -296,19 +331,19 @@ img {
 	background-color: var(--bg-color-minor);
 }
 
-.advantages-icon {
+.advantages__icon {
 	width: 70px;
 	height: 70px;
 }
 
-.advantages-name {
+.advantages__name {
 	padding-bottom: 10px;
 
 	font-size: inherit;
 	font-weight: 700;
 }
 
-.advantages-text {
+.advantages__text {
 	line-height: 1.715;
 	color: var(--secondary-color);
 }
@@ -321,19 +356,19 @@ img {
 	padding-bottom: 94px;
 }
 
-.services-list {
+.services__list {
 	display: flex;
 }
 
-.services-item {
+.services__item {
 	position: relative;
 }
 
-.services-item:not(:last-child) {
+.services__item:not(:last-child) {
 	margin-right: 30px;
 }
 
-.services-desc {
+.services__desc {
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -343,9 +378,13 @@ img {
 	padding: 27px 0;
 
 	background-color: rgb(47, 48, 58, 0.8);
+}
+
+.services__subject {
 	color: var(--design-white-color);
 	text-align: center;
 	text-transform: uppercase;
+	font-weight: 700;
 }
 
 /* --------------------- END SERVICES --------------------- */
@@ -354,15 +393,17 @@ img {
 
 .team {
 	padding: 94px 0;
+
 	background: var(--bg-color-minor);
 }
 
-.team-list {
+.team__list {
 	display: flex;
 	justify-content: space-between;
 }
 
-.team-item {
+.team__item {
+	padding-bottom: 30px;
 	border-radius: 0 0 4px 4px;
 
 	background-color: var(--design-white-color);
@@ -370,7 +411,7 @@ img {
 		0 2px 1px 0 RGB(0, 0, 0, 20%);
 }
 
-.team-name {
+.team__name {
 	margin: 30px 0 10px;
 
 	text-align: center;
@@ -378,7 +419,7 @@ img {
 	font-weight: 500;
 }
 
-.team-desc {
+.team__desc {
 	margin-bottom: 16px;
 
 	text-align: center;
@@ -386,45 +427,9 @@ img {
 	color: var(--secondary-color);
 }
 
-.team-social-list {
-	display: flex;
-	margin-bottom: 30px;
-	padding: 0 32px;
-}
-
-.team-social-item {
-	width: 44px;
-	height: 44px;
-}
-
-.team-social-item:not(:last-child) {
-	margin-right: 10px;
-}
-
-.team-social-link {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-
-	color: var(--icon-color);
-
-	transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
-}
-
-.team-social-link:hover,
-.team-social-link:focus {
-	color: var(--design-white-color);
-	background-color: var(--accent-color);
-}
-
-.team-social-icon {
-	width: 20px;
-	height: 20px;
-
-	fill: currentColor;
+.social--team {
+	width: 206px;
+	margin: 0 auto;
 }
 
 /* --------------------- END TEAM --------------------- */
@@ -435,15 +440,15 @@ img {
 	padding: 94px 0;
 }
 
-.clients-list {
+.clients__list {
 	display: flex;
 }
 
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
 	margin-right: 30px;
 }
 
-.clients-link {
+.clients__link {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -457,13 +462,13 @@ img {
 	transition: color 250ms var(--timing-fn), border-color 250ms var(--timing-fn);
 }
 
-.clients-link:hover,
-.clients-link:focus {
-	border: 1px solid var(--accent-color);
+.clients__link:hover,
+.clients__link:focus {
+	border-color: var(--accent-color);
 	color: var(--accent-color);
 }
 
-.clients-icon {
+.clients__icon {
 	width: 106px;
 	height: 60px;
 
@@ -485,21 +490,22 @@ img {
 	align-items: center;
 }
 
-.footer-address-wrap {
+.footer-address {
 	width: 231px;
 	margin-right: 70px;
 }
 
-.footer-contacts {
+.footer-address__contacts {
 	margin-top: 28px;
+
 	font-style: normal;
 }
 
-.footer-address {
+.footer-address__route {
 	color: var(--design-white-color);
 }
 
-.footer-address-link {
+.footer-address__link {
 	display: block;
 	margin-top: 12px;
 
@@ -509,8 +515,8 @@ img {
 	transition: color 250ms var(--timing-fn);
 }
 
-.footer-address-link:hover,
-.footer-address-link:focus {
+.footer-address__link:hover,
+.footer-address__link:focus {
 	color: var(--accent-color);
 }
 
@@ -518,7 +524,7 @@ img {
 	width: 206px;
 }
 
-.footer-social-title {
+.footer-social__title {
 	margin-bottom: 20px;
 
 	font-size: 14px;
@@ -527,59 +533,28 @@ img {
 	color: var(--design-white-color);
 }
 
-.footer-social-list {
-	display: flex;
-	justify-content: space-between;
-}
-
-.footer-social-item {
-	width: 44px;
-	height: 44px;
-}
-
-.footer-social-link {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-
-	background-color: rgba(255, 255, 255, 0.1);
+.social__link--footer {
 	color: var(--design-white-color);
-
-	transition: background-color 250ms var(--timing-fn);
-}
-
-.footer-social-link:hover,
-.footer-social-link:focus {
-	background-color: var(--accent-color);
-}
-
-.footer-social-icon {
-	width: 20px;
-	height: 20px;
-
-	fill: currentColor;
+	background-color: rgba(255, 255, 255, 0.1);
 }
 
 .footer-subscribe {
 	margin-left: auto;
 }
 
-.footer-subscribe-title {
+.footer-subscribe__title {
 	margin-bottom: 20px;
 
 	text-transform: uppercase;
 	color: var(--design-white-color);
 }
 
-.footer-subscribe-form {
+.subscribe-form {
 	display: flex;
 	align-items: center;
 }
 
-.footer-email {
+.subscribe-form__email {
 	width: 358px;
 	height: 50px;
 	margin-right: 12px;
@@ -594,13 +569,13 @@ img {
 	box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
 }
 
-.footer-email:placeholder-shown {
+.subscribe-form__email:placeholder-shown {
 	font-size: 16px;
 	line-height: 1.25;
 	color: rgb(0, 0, 0, 0.6);
 }
 
-.footer-btn {
+.subscribe-form__btn {
 	display: flex;
 	align-items: center;
 	width: 200px;
@@ -619,8 +594,9 @@ img {
 	cursor: pointer;
 }
 
-.footer-subscribe-icon {
+.subscribe-form__icon {
 	margin-left: 25px;
+
 	fill: currentColor;
 }
 
@@ -628,7 +604,7 @@ img {
 
 /* --------------------- MODAL --------------------- */
 
-.modal-backdrop {
+.backdrop {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -642,13 +618,13 @@ img {
 	transition: opacity 250ms var(--timing-fn);
 }
 
-.modal-backdrop.is-hidden {
+.backdrop.is-hidden {
 	pointer-events: none;
 
 	opacity: 0;
 }
 
-.modal-window {
+.modal {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -666,11 +642,11 @@ img {
 	transition: transform 250ms var(--timing-fn);
 }
 
-.modal-backdrop.is-hidden .modal-window {
+.backdrop.is-hidden .modal {
 	transform: translate(-50%, -50%) scale(0.5);
 }
 
-.modal-close-button {
+.modal__close-button {
 	position: absolute;
 	top: 8px;
 	right: 8px;
@@ -691,19 +667,19 @@ img {
 	transition: color 250ms var(--timing-fn);
 }
 
-.modal-close-icon {
+.modal__close-icon {
 	width: 18px;
 	height: 18px;
 
 	fill: currentColor;
 }
 
-.modal-close-button:hover,
-.modal-close-button:focus {
+.modal-close__button:hover,
+.modal-close__button:focus {
 	color: var(--accent-color);
 }
 
-.modal-title {
+.modal__title {
 	margin-bottom: 30px;
 
 	font-size: 20px;
@@ -712,24 +688,23 @@ img {
 	text-align: center;
 }
 
-.modal-form-list {
+.info-form__list {
 	margin-bottom: 20px;
 }
 
-.modal-form-item {
+.info-form__item {
 	position: relative;
 
 	margin-bottom: 28px;
 }
 
-.modal-form-item:last-child {
+.info-form__item:last-child {
 	margin-bottom: 0px;
 }
 
-.modal-input {
+.info-form__input {
 	display: block;
 	padding: 11px 12px 11px 42px;
-
 	width: 100%;
 	border: 1px solid rgb(33, 33, 33, 20%);
 	border-radius: 4px;
@@ -738,7 +713,7 @@ img {
 	transition: border-color 250ms var(--timing-fn);
 }
 
-.modal-label {
+.info-form__label {
 	position: absolute;
 	top: 50%;
 	left: 42px;
@@ -754,36 +729,36 @@ img {
 	transition: transform 250ms var(--timing-fn), color 250ms var(--timing-fn);
 }
 
-.modal-icon {
+.info-form__icon {
 	position: absolute;
 	top: 50%;
 	left: 12px;
-	transform: translateY(-50%);
 
 	fill: var(--main-color);
 
+	transform: translateY(-50%);
 	transition: fill 250ms var(--timing-fn);
 }
 
-.modal-input:focus {
+.info-form__input:focus {
 	border-color: var(--accent-color);
 }
 
-.modal-input:focus ~ .modal-icon {
+.info-form__input:focus ~ .info-form__icon {
 	fill: var(--accent-color);
 }
 
-.modal-input:focus + .modal-label {
+.info-form__input:focus + .info-form__label {
 	color: var(--accent-color);
 
 	transform: translate(-42px, -40px);
 }
 
-.modal-input:not(:placeholder-shown) + .modal-label {
+.info-form__input:not(:placeholder-shown) + .info-form__label {
 	transform: translate(-42px, -40px);
 }
 
-.modal-textarea {
+.info-form__textarea {
 	display: block;
 	width: 100%;
 	height: 120px;
@@ -791,30 +766,28 @@ img {
 	resize: none;
 	border: 1px solid rgb(33, 33, 33, 20%);
 	border-radius: 4px;
-
 	outline: none;
 
 	transition: border-color 250ms var(--timing-fn);
 }
 
-.modal-textarea + .modal-label {
+.info-form__textarea + .info-form__label {
 	transform: translate(-42px, -80px);
 }
 
-.modal-textarea:focus {
-	border: 1px solid var(--accent-color);
+.info-form__textarea:focus {
+	border-color: var(--accent-color);
 }
 
-.modal-textarea:placeholder-shown {
+.info-form__textarea:placeholder-shown {
 	color: rgb(117, 117, 117, 50%);
 	letter-spacing: 0.01em;
 }
 
-.modal-textarea:focus + .modal-label {
+.info-form__textarea:focus + .info-form__label {
 	color: var(--accent-color);
 }
-
-.modal-checkbox-label {
+__ .info-form__checkbox-label {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -824,7 +797,7 @@ img {
 	color: var(--secondary-color);
 }
 
-.modal-checkbox-current {
+.info-form__checkbox-current {
 	margin-right: 8px;
 	border-radius: 2px;
 	border: 2px solid var(--main-color);
@@ -835,13 +808,13 @@ img {
 	transition: border-width 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
 }
 
-.modal-checkbox-initial:checked + .modal-checkbox-current {
+.info-form__checkbox-initial:checked + .info-form__checkbox-current {
 	border-width: 0px;
 
 	background-color: var(--accent-color);
 }
 
-.modal-btn-conditions {
+.info-form__btn-conditions {
 	padding: 0;
 	margin-left: 4px;
 	border: none;
@@ -852,7 +825,7 @@ img {
 	cursor: pointer;
 }
 
-.modal-send-button {
+.info-form__button {
 	display: block;
 	width: 200px;
 	height: 50px;
@@ -870,8 +843,8 @@ img {
 	transition: background-color 250ms var(--timing-fn);
 }
 
-.modal-send-button:hover,
-.modal-send-button:focus {
+.info-form__button:hover,
+.info-form__button:focus {
 	background-color: var(--acc-color-hover);
 }
 
@@ -884,20 +857,19 @@ img {
 	border-top: 1px solid #ececec;
 }
 
-.portfolio-btn-list {
+.buttons {
 	display: flex;
 	justify-content: center;
 	margin-bottom: 50px;
 }
 
-.portfolio-btn-item:not(:last-child) {
+.buttons__item:not(:last-child) {
 	margin-right: 8px;
 }
 
-.portfolio-btn {
+.buttons__snap {
 	display: block;
 	padding: 6px 23px;
-
 	border-radius: 4px;
 	border: none;
 	cursor: pointer;
@@ -912,42 +884,42 @@ img {
 		box-shadow 250ms var(--timing-fn);
 }
 
-.portfolio-btn:hover,
-.portfolio-btn:focus {
+.buttons__snap:hover,
+.buttons__snap:focus {
+	color: var(--design-white-color);
+	background-color: var(--accent-color);
 	box-shadow: 0 4px 1px 0px RGB(0, 0, 0, 10%), 0 1px 2px 0px RGB(0, 0, 0, 8%),
 		0 2px 2px 0px RGB(0, 0, 0, 12%);
-	background-color: var(--accent-color);
-	color: var(--design-white-color);
 }
 
-.portfolio-list {
+.projects {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 30px;
 	width: calc((100%-2 * 30px) / 3);
 }
 
-.portfolio-link {
+.projects__link {
 	display: block;
 
 	transition: box-shadow 250ms var(--timing-fn);
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
+.projects__link:hover,
+.projects__link:focus {
 	box-shadow: 0 1px 1px 0 rgb(0, 0, 0, 0.12), 0 4px 4px 0 rgb(0, 0, 0, 0.06),
 		1px 4px 6px 0 rgb(0, 0, 0, 0.16);
 }
 
-.portfolio-wrapper {
+.projects__wrapper {
 	position: relative;
 }
 
-.portfolio-wrapper.overflow-hidden {
+.projects__wrapper.overflow-hidden {
 	overflow: hidden;
 }
 
-.portfolio-overlay {
+.projects__overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -959,63 +931,62 @@ img {
 	background-color: rgb(33, 150, 243, 0.9);
 }
 
-.portfolio-overlay.web {
+.projects__overlay--web {
 	transform: translateY(100%);
 	transition: transform 250ms var(--timing-fn);
 }
 
-.portfolio-link:hover .portfolio-overlay.web,
-.portfolio-link:focus .portfolio-overlay.web {
+.projects__link:hover .projects__overlay--web,
+.projects__link:focus .projects__overlay--web {
 	transform: translateY(0%);
 }
 
-.portfolio-overlay.design {
+.projects__overlay--design {
 	transform: rotateZ(0deg) scale(0);
 	transition: transform 500ms var(--timing-fn);
 }
 
-.portfolio-link:hover .portfolio-overlay.design,
-.portfolio-link:focus .portfolio-overlay.design {
+.projects__link:hover .projects__overlay--design,
+.projects__link:focus .projects__overlay--design {
 	transform: rotateZ(360deg) scale(1);
 }
 
-.portfolio-overlay.apps {
+.projects__overlay--apps {
 	transform: perspective(350px) rotateY(180deg);
 	opacity: 0;
 	transition: transform 500ms var(--timing-fn), opacity 500ms var(--timing-fn);
 }
 
-.portfolio-link:hover .portfolio-overlay.apps,
-.portfolio-link:focus .portfolio-overlay.apps {
+.projects__link:hover .projects__overlay--apps,
+.projects__link:focus .projects__overlay--apps {
 	transform: rotateY(360deg);
 	opacity: 1;
 }
 
-.portfolio-overlay.marketing {
+.projects__overlay--marketing {
 	transform: scale(0);
 	transition: transform 500ms var(--timing-fn);
 }
 
-.portfolio-link:hover .portfolio-overlay.marketing,
-.portfolio-link:focus .portfolio-overlay.marketing {
+.projects__link:hover .projects__overlay--marketing,
+.projects__link:focus .projects__overlay--marketing {
 	transform: scale(1);
 }
 
-.portfolio-details {
+.projects__details {
 	font-size: 18px;
 	line-height: 1.556;
 	color: var(--design-white-color);
 }
 
-.portfolio-desc-wrap {
+.projects__desc-wrap {
 	padding: 20px 24px;
-
-	border-right: 1px solid var(--portfolio-item-color);
-	border-bottom: 1px solid var(--portfolio-item-color);
-	border-left: 1px solid var(--portfolio-item-color);
+	border-right: 1px solid var(--projects-item-color);
+	border-bottom: 1px solid var(--projects-item-color);
+	border-left: 1px solid var(--projects-item-color);
 }
 
-.portfolio-name {
+.projects__name {
 	margin-bottom: 4px;
 
 	font-size: 18px;
@@ -1024,7 +995,7 @@ img {
 	letter-spacing: 0.06em;
 }
 
-.portfolio-desc {
+.projects__desc {
 	font-size: 16px;
 	line-height: 1.875;
 	color: var(--secondary-color);
