--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,30 @@ img {
   fill: currentColor;
 }
 
+.info-form__button, .subscribe-form__btn, .hero__btn {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  border: none;
+  color: var(--design-white-color);
+  background-color: var(--accent-color);
+  -webkit-box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
+          box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1.875;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  -webkit-transition: background-color 250ms var(--timing-fn);
+  transition: background-color 250ms var(--timing-fn);
+}
+.info-form__button:hover, .subscribe-form__btn:hover, .hero__btn:hover, .info-form__button:focus, .subscribe-form__btn:focus, .hero__btn:focus {
+  background-color: var(--acc-color-hover);
+}
+
 .header .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -504,28 +528,7 @@ img {
 }
 
 .hero__btn {
-  display: block;
   margin: 30px auto 0;
-  padding: 0;
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  border: none;
-  color: var(--design-white-color);
-  background-color: var(--accent-color);
-  -webkit-box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
-          box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
-  cursor: pointer;
-  font-family: inherit;
-  font-size: 16px;
-  line-height: 1.875;
-  font-weight: 700;
-  letter-spacing: 0.06em;
-  -webkit-transition: background-color 250ms var(--timing-fn);
-  transition: background-color 250ms var(--timing-fn);
-}
-.hero__btn:hover, .hero__btn:focus {
-  background-color: var(--acc-color-hover);
 }
 
 .advantages {
@@ -798,19 +801,8 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  border: none;
   padding-left: 43px;
   padding-right: 28px;
-  background-color: var(--accent-color);
-  color: var(--design-white-color);
-  font-size: 16px;
-  line-height: 1.188;
-  font-weight: 700;
-  letter-spacing: 0.06em;
-  cursor: pointer;
 }
 
 .subscribe-form__icon {
@@ -1046,21 +1038,5 @@ img {
 }
 
 .info-form__button {
-  display: block;
-  width: 200px;
-  height: 50px;
-  padding: 0;
   margin: 0 auto;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.06em;
-  color: var(--design-white-color);
-  background-color: var(--accent-color);
-  -webkit-transition: background-color 250ms var(--timing-fn);
-  transition: background-color 250ms var(--timing-fn);
-}
-.info-form__button:hover, .info-form__button:focus {
-  background-color: var(--acc-color-hover);
 }/*# sourceMappingURL=main.css.map */
