--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -380,6 +380,30 @@ img {
   fill: currentColor;
 }
 
+.subscribe-form__btn {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  border: none;
+  color: var(--design-white-color);
+  background-color: var(--accent-color);
+  -webkit-box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
+          box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1.875;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  -webkit-transition: background-color 250ms var(--timing-fn);
+  transition: background-color 250ms var(--timing-fn);
+}
+.subscribe-form__btn:hover, .subscribe-form__btn:focus {
+  background-color: var(--acc-color-hover);
+}
+
 .header .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -753,19 +777,8 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  border: none;
   padding-left: 43px;
   padding-right: 28px;
-  background-color: var(--accent-color);
-  color: var(--design-white-color);
-  font-size: 16px;
-  line-height: 1.188;
-  font-weight: 700;
-  letter-spacing: 0.06em;
-  cursor: pointer;
 }
 
 .subscribe-form__icon {
