--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -90,22 +90,12 @@
 }
 
 .subscribe-form__btn {
+	@extend %main-button;
+
 	display: flex;
 	align-items: center;
-	width: 200px;
-	height: 50px;
-	border-radius: 4px;
-	border: none;
 	padding-left: 43px;
 	padding-right: 28px;
-
-	background-color: var(--accent-color);
-	color: var(--design-white-color);
-	font-size: 16px;
-	line-height: 1.188;
-	font-weight: 700;
-	letter-spacing: 0.06em;
-	cursor: pointer;
 }
 
 .subscribe-form__icon {
