--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './common/base';
 @import './components/logo';
 @import './components/social';
+@import './placeholders/main-button';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/advantages';
