--- a/sass/components/_info-form.scss
+++ b/sass/components/_info-form.scss
@@ -16,7 +16,7 @@
 	display: block;
 	padding: 11px 12px 11px 42px;
 	width: 100%;
-	border: 1px solid rgb(33, 33, 33, 20%);
+	border: 1px solid rgba(33, 33, 33, 20%);
 	border-radius: 4px;
 	outline: none;
 
@@ -82,7 +82,7 @@
 	height: 120px;
 	padding: 12px 16px;
 	resize: none;
-	border: 1px solid rgb(33, 33, 33, 20%);
+	border: 1px solid rgba(33, 33, 33, 20%);
 	border-radius: 4px;
 	outline: none;
 
@@ -92,8 +92,8 @@
 		border-color: var(--accent-color);
 	}
 
-	&:placeholder-shown {
-		color: rgb(117, 117, 117, 50%);
+	&::placeholder {
+		color: rgba(117, 117, 117, 50%);
 		letter-spacing: 0.01em;
 	}
 }
