--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -74,18 +74,18 @@
 	margin-right: 12px;
 	padding: 15px 16px;
 	border-radius: 4px;
-	border: 1px solid rgb(255, 255, 255, 0.3);
+	border: 1px solid rgba(255, 255, 255, 0.3);
 
 	font-size: 16px;
 	line-height: 1.25;
 	color: var(--design-white-color);
 	background-color: transparent;
-	box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 15%);
 
-	&:placeholder-shown {
+	&::placeholder {
 		font-size: 16px;
 		line-height: 1.25;
-		color: rgb(0, 0, 0, 0.6);
+		color: rgba(250, 250, 250, 0.6);
 	}
 }
 
