--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100%;
 
-	background-color: rgb(0, 0, 0, 0.2);
+	background-color: rgba(0, 0, 0, 0.2);
 	opacity: 1;
 
 	transition: opacity 250ms var(--timing-fn);
@@ -29,8 +29,8 @@
 	padding: 40px;
 
 	background-color: var(--design-white-color);
-	box-shadow: 0 1px 3px 0 rgb(0, 0, 0, 0.12), 0 1px 1px 0 rgb(0, 0, 0, 0.14),
-		0 2px 1px 0 rgb(0, 0, 0, 0.2);
+	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+		0 2px 1px 0 rgba(0, 0, 0, 0.2);
 
 	transform: translate(-50%, -50%) scale(1);
 	transition: transform 250ms var(--timing-fn);
