--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -20,8 +20,8 @@
 
 	&:hover,
 	&:focus {
-		box-shadow: 0 1px 1px 0 rgb(0, 0, 0, 0.12), 0 4px 4px 0 rgb(0, 0, 0, 0.06),
-			1px 4px 6px 0 rgb(0, 0, 0, 0.16);
+		box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
+			1px 4px 6px 0 rgba(0, 0, 0, 0.16);
 	}
 }
 
@@ -42,7 +42,7 @@
 	height: 294px;
 	padding: 24px;
 
-	background-color: rgb(33, 150, 243, 0.9);
+	background-color: rgba(33, 150, 243, 0.9);
 
 	&--web {
 		transform: translateY(100%);
