--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -23,7 +23,7 @@
 	height: 70px;
 	padding: 27px 0;
 
-	background-color: rgb(47, 48, 58, 0.8);
+	background-color: rgba(47, 48, 58, 0.8);
 }
 
 .services__subject {
