--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -14,8 +14,8 @@
 	border-radius: 0 0 4px 4px;
 
 	background-color: var(--design-white-color);
-	box-shadow: 0 1px 3px 0 RGB(0, 0, 0, 12%), 0 1px 1px 0 RGB(0, 0, 0, 14%),
-		0 2px 1px 0 RGB(0, 0, 0, 20%);
+	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 12%), 0 1px 1px 0 rgba(0, 0, 0, 14%),
+		0 2px 1px 0 rgba(0, 0, 0, 20%);
 }
 
 .team__name {
