--- a/sass/placeholders/_main-button.scss
+++ b/sass/placeholders/_main-button.scss
@@ -9,7 +9,7 @@
 
 	color: var(--design-white-color);
 	background-color: var(--accent-color);
-	box-shadow: 0 4px 4px 0 RGB(0, 0, 0, 15%);
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 15%);
 	cursor: pointer;
 
 	font-size: 16px;
