--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,9 +2,9 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
 @import './common/base';
+@import './utils/placeholders';
 @import './components/logo';
 @import './components/social';
-@import './placeholders/main-button';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/advantages';
