--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,12 @@ body {
   letter-spacing: 0.03em;
   color: var(--main-color);
 }
+body.dark-theme {
+  --main-color: #ffffff;
+  --secondary-color: hsl(0, 2%, 68%);
+  --bg-color-minor: #aaaaaa78;
+  background-color: #383839;
+}
 
 h1,
 h2,
@@ -307,6 +313,30 @@ img {
   text-align: center;
   font-size: 36px;
   font-weight: 700;
+}
+
+.info-form__button, .subscribe-form__btn, .hero__btn {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  border: none;
+  color: var(--design-white-color);
+  background-color: var(--accent-color);
+  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1.875;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  -webkit-transition: background-color 250ms var(--timing-fn);
+  transition: background-color 250ms var(--timing-fn);
+}
+.info-form__button:hover, .subscribe-form__btn:hover, .hero__btn:hover, .info-form__button:focus, .subscribe-form__btn:focus, .hero__btn:focus {
+  background-color: var(--acc-color-hover);
 }
 
 .logo {
@@ -378,30 +408,6 @@ img {
   width: 20px;
   height: 20px;
   fill: currentColor;
-}
-
-.info-form__button, .subscribe-form__btn, .hero__btn {
-  display: block;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  border: none;
-  color: var(--design-white-color);
-  background-color: var(--accent-color);
-  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  cursor: pointer;
-  font-size: 16px;
-  line-height: 1.875;
-  font-weight: 700;
-  letter-spacing: 0.06em;
-  -webkit-transition: background-color 250ms var(--timing-fn);
-  transition: background-color 250ms var(--timing-fn);
-}
-.info-form__button:hover, .subscribe-form__btn:hover, .hero__btn:hover, .info-form__button:focus, .subscribe-form__btn:focus, .hero__btn:focus {
-  background-color: var(--acc-color-hover);
 }
 
 .header .container {
