--- a/css/main.css
+++ b/css/main.css
@@ -303,9 +303,25 @@ img {
 }
 
 .container {
-  width: 1200px;
+  min-width: 320px;
   padding: 0 15px;
   margin: 0 auto;
+  outline: 1px solid rgba(91, 91, 234, 0.597);
+}
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .section-title {
@@ -315,40 +331,27 @@ img {
   font-weight: 700;
 }
 
-.info-form__button, .subscribe-form__btn, .hero__btn {
-  display: block;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  border: none;
-  color: var(--design-white-color);
-  background-color: var(--accent-color);
-  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  cursor: pointer;
-  font-size: 16px;
-  line-height: 1.875;
-  font-weight: 700;
-  letter-spacing: 0.06em;
-  -webkit-transition: background-color 250ms var(--timing-fn);
-  transition: background-color 250ms var(--timing-fn);
-}
-.info-form__button:hover, .subscribe-form__btn:hover, .hero__btn:hover, .info-form__button:focus, .subscribe-form__btn:focus, .hero__btn:focus {
-  background-color: var(--acc-color-hover);
-}
-
 .logo {
   font-family: var(--logo-text);
-  font-size: 26px;
-  line-height: 1.192;
+  font-size: 24px;
+  line-height: 1.167;
   font-weight: 700;
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.192;
+  }
 }
 
 .logo--top {
-  padding: 24px 0;
+  padding: 16px 0;
   color: var(--design-black-color);
+}
+@media screen and (min-width: 768px) {
+  .logo--top {
+    padding: 24px 0;
+  }
 }
 
 .logo--bottom {
@@ -357,57 +360,6 @@ img {
 
 .logo--accent {
   color: var(--accent-color);
-}
-
-.social {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-.social--team {
-  width: 206px;
-  margin: 0 auto;
-}
-
-.social__item {
-  width: 44px;
-  height: 44px;
-}
-
-.social__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  color: var(--icon-color);
-  background-color: transparent;
-  -webkit-transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
-  transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
-}
-.social__link:hover, .social__link:focus {
-  color: var(--design-white-color);
-  background-color: var(--accent-color);
-}
-.social__link--footer {
-  color: var(--design-white-color);
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.social__icon {
-  width: 20px;
-  height: 20px;
-  fill: currentColor;
 }
 
 .header .container {
@@ -421,6 +373,11 @@ img {
 
 .nav {
   margin-left: 93px;
+}
+@media screen and (max-width: 767px) {
+  .nav {
+    display: none;
+  }
 }
 
 .nav__list {
@@ -479,10 +436,19 @@ img {
 }
 
 .header-address {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
+}
+@media screen and (max-width: 767px) {
+  .header-address {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-address {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .header-address__link {
@@ -492,18 +458,28 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 32px 0;
+  padding: 10px 0;
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
   -webkit-transition: color 250ms var(--timing-fn);
   transition: color 250ms var(--timing-fn);
 }
-.header-address__link:not(:last-child) {
-  margin-right: 40px;
-}
 .header-address__link:hover, .header-address__link:focus {
   color: var(--accent-color);
+}
+@media screen and (max-width: 1199px) {
+  .header-address__link:not(:last-child) {
+    margin-bottom: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-address__link {
+    padding: 32px 0;
+  }
+  .header-address__link:not(:last-child) {
+    margin-right: 40px;
+  }
 }
 
 .header-address__icon {
@@ -514,553 +490,28 @@ img {
   fill: currentColor;
 }
 
-.hero {
-  padding: 200px 0;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/desktop/hero.jpg);
-  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/desktop/hero.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 1600px;
-}
-
-.hero__title {
-  padding: 0 237px;
-  text-align: center;
-  font-size: 44px;
-  line-height: 1.364;
-  font-weight: 900;
-  letter-spacing: 0.06em;
-  color: var(--design-white-color);
-}
-
-.hero__btn {
-  margin: 30px auto 0;
-}
-
-.advantages {
-  padding: 94px 0;
-}
-
-.advantages__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.advantages__item {
-  width: 270px;
-}
-.advantages__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.advantages__wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 270px;
-  height: 120px;
-  border-radius: 4px;
-  margin-bottom: 30px;
-  background-color: var(--bg-color-minor);
-}
-
-.advantages__icon {
-  width: 70px;
-  height: 70px;
-}
-
-.advantages__name {
-  padding-bottom: 10px;
-  font-size: inherit;
-  font-weight: 700;
-}
-
-.advantages__text {
-  line-height: 1.715;
-  color: var(--secondary-color);
-}
-
-.services {
-  padding-bottom: 94px;
-}
-
-.services__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.services__item {
-  position: relative;
-}
-.services__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.services__desc {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 370px;
-  height: 70px;
-  padding: 27px 0;
-  background-color: rgba(47, 48, 58, 0.8);
-}
-
-.services__subject {
-  color: var(--design-white-color);
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.team {
-  padding: 94px 0;
-  background: var(--bg-color-minor);
-}
-
-.team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.team__item {
-  padding-bottom: 30px;
-  border-radius: 0 0 4px 4px;
-  background-color: var(--design-white-color);
-  -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-}
-
-.team__name {
-  margin: 30px 0 10px;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.team__desc {
-  margin-bottom: 16px;
-  text-align: center;
-  font-size: 16px;
-  color: var(--secondary-color);
-}
-
-.clients {
-  padding: 94px 0;
-}
-
-.clients__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.clients__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.clients__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 168px;
-  height: 90px;
-  border-radius: 4px;
-  border: 1px solid var(--icon-color);
-  color: var(--icon-color);
-  -webkit-transition: color 250ms var(--timing-fn), border-color 250ms var(--timing-fn);
-  transition: color 250ms var(--timing-fn), border-color 250ms var(--timing-fn);
-}
-.clients__link:hover, .clients__link:focus {
-  border-color: var(--accent-color);
-  color: var(--accent-color);
-}
-
-.clients__icon {
-  width: 106px;
-  height: 60px;
-  fill: currentColor;
-}
-
-.footer {
-  padding: 60px 0;
-  background-color: var(--bg-color);
-}
-.footer .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.footer-address {
-  width: 231px;
-  margin-right: 70px;
-}
-
-.footer-address__contacts {
-  margin-top: 28px;
-  font-style: normal;
-}
-
-.footer-address__route {
-  color: var(--design-white-color);
-}
-
-.footer-address__link {
-  display: block;
-  margin-top: 12px;
-  line-height: 1.143;
-  color: var(--secondary-color);
-  -webkit-transition: color 250ms var(--timing-fn);
-  transition: color 250ms var(--timing-fn);
-}
-.footer-address__link:hover, .footer-address__link:focus {
-  color: var(--accent-color);
-}
-
-.footer-social {
-  width: 206px;
-}
-
-.footer-social__title {
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 1.143;
-  text-transform: uppercase;
-  color: var(--design-white-color);
-}
-
-.footer-subscribe {
+.mobmenu__button {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  padding: 0;
   margin-left: auto;
-}
-
-.footer-subscribe__title {
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  color: var(--design-white-color);
-}
-
-.subscribe-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.subscribe-form__email {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
-  padding: 15px 16px;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  font-size: 16px;
-  line-height: 1.25;
-  color: var(--design-white-color);
+  border: none;
+  color: var(--main-color);
   background-color: transparent;
-  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-}
-.subscribe-form__email::-webkit-input-placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(250, 250, 250, 0.6);
-}
-.subscribe-form__email::-moz-placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(250, 250, 250, 0.6);
-}
-.subscribe-form__email:-ms-input-placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(250, 250, 250, 0.6);
-}
-.subscribe-form__email::-ms-input-placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(250, 250, 250, 0.6);
-}
-.subscribe-form__email::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(250, 250, 250, 0.6);
-}
-
-.subscribe-form__btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-left: 43px;
-  padding-right: 28px;
-}
-
-.subscribe-form__icon {
-  margin-left: 25px;
-  fill: currentColor;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  opacity: 1;
-  -webkit-transition: opacity 250ms var(--timing-fn);
-  transition: opacity 250ms var(--timing-fn);
-}
-.backdrop.is-hidden {
-  pointer-events: none;
-  opacity: 0;
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 528px;
-  height: 581px;
-  border-radius: 4px;
-  padding: 40px;
-  background-color: var(--design-white-color);
-  -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
-  -webkit-transition: -webkit-transform 250ms var(--timing-fn);
-  transition: -webkit-transform 250ms var(--timing-fn);
-  transition: transform 250ms var(--timing-fn);
-  transition: transform 250ms var(--timing-fn), -webkit-transform 250ms var(--timing-fn);
-}
-.backdrop.is-hidden .modal {
-  -webkit-transform: translate(-50%, -50%) scale(0.5);
-          transform: translate(-50%, -50%) scale(0.5);
-}
-
-.modal__close-button {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  color: var(--design-black-color);
-  background-color: var(--design-white-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
   -webkit-transition: color 250ms var(--timing-fn);
   transition: color 250ms var(--timing-fn);
 }
-.modal__close-button:hover, .modal__close-button:focus {
+.mobmenu__button:hover, .mobmenu__button:focus {
   color: var(--accent-color);
 }
+@media screen and (min-width: 768px) {
+  .mobmenu__button {
+    display: none;
+  }
+}
 
-.modal__close-icon {
-  width: 18px;
-  height: 18px;
+.mobmenu__button-icon {
   fill: currentColor;
-}
-
-.modal__title {
-  margin-bottom: 30px;
-  font-size: 20px;
-  line-height: 1.15;
-  font-weight: 700;
-  text-align: center;
-}
-
-.info-form__list {
-  margin-bottom: 20px;
-}
-
-.info-form__item {
-  position: relative;
-  margin-bottom: 28px;
-}
-.info-form__item:last-child {
-  margin-bottom: 0px;
-}
-
-.info-form__input {
-  display: block;
-  padding: 11px 12px 11px 42px;
-  width: 100%;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-  -webkit-transition: border-color 250ms var(--timing-fn);
-  transition: border-color 250ms var(--timing-fn);
-}
-.info-form__input:focus {
-  border-color: var(--accent-color);
-}
-
-.info-form__label {
-  position: absolute;
-  top: 50%;
-  left: 42px;
-  display: block;
-  color: var(--secondary-color);
-  font-size: 12px;
-  line-height: 1.167;
-  letter-spacing: 0.01em;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: color 250ms var(--timing-fn), -webkit-transform 250ms var(--timing-fn);
-  transition: color 250ms var(--timing-fn), -webkit-transform 250ms var(--timing-fn);
-  transition: transform 250ms var(--timing-fn), color 250ms var(--timing-fn);
-  transition: transform 250ms var(--timing-fn), color 250ms var(--timing-fn), -webkit-transform 250ms var(--timing-fn);
-}
-.info-form__input:focus + .info-form__label {
-  color: var(--accent-color);
-  -webkit-transform: translate(-42px, -40px);
-          transform: translate(-42px, -40px);
-}
-.info-form__input:not(:-moz-placeholder-shown) + .info-form__label {
-  transform: translate(-42px, -40px);
-}
-.info-form__input:not(:-ms-input-placeholder) + .info-form__label {
-  transform: translate(-42px, -40px);
-}
-.info-form__input:not(:placeholder-shown) + .info-form__label {
-  -webkit-transform: translate(-42px, -40px);
-          transform: translate(-42px, -40px);
-}
-.info-form__textarea + .info-form__label {
-  -webkit-transform: translate(-42px, -80px);
-          transform: translate(-42px, -80px);
-}
-.info-form__textarea:focus + .info-form__label {
-  color: var(--accent-color);
-}
-
-.info-form__icon {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  fill: var(--main-color);
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: fill 250ms var(--timing-fn);
-  transition: fill 250ms var(--timing-fn);
-}
-.info-form__input:focus ~ .info-form__icon {
-  fill: var(--accent-color);
-}
-
-.info-form__textarea {
-  display: block;
-  width: 100%;
-  height: 120px;
-  padding: 12px 16px;
-  resize: none;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-  -webkit-transition: border-color 250ms var(--timing-fn);
-  transition: border-color 250ms var(--timing-fn);
-}
-.info-form__textarea:focus {
-  border-color: var(--accent-color);
-}
-.info-form__textarea::-webkit-input-placeholder {
-  color: rgba(117, 117, 117, 0.5);
-  letter-spacing: 0.01em;
-}
-.info-form__textarea::-moz-placeholder {
-  color: rgba(117, 117, 117, 0.5);
-  letter-spacing: 0.01em;
-}
-.info-form__textarea:-ms-input-placeholder {
-  color: rgba(117, 117, 117, 0.5);
-  letter-spacing: 0.01em;
-}
-.info-form__textarea::-ms-input-placeholder {
-  color: rgba(117, 117, 117, 0.5);
-  letter-spacing: 0.01em;
-}
-.info-form__textarea::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-  letter-spacing: 0.01em;
-}
-
-.info-form__checkbox-label {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 30px;
-  line-height: 1.714;
-  color: var(--secondary-color);
-}
-
-.info-form__checkbox-current {
-  margin-right: 8px;
-  border-radius: 2px;
-  border: 2px solid var(--main-color);
-  fill: var(--design-white-color);
-  background-color: var(--design-white-color);
-  -webkit-transition: border-width 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
-  transition: border-width 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
-}
-.info-form__checkbox-initial:checked + .info-form__checkbox-current {
-  border-width: 0px;
-  background-color: var(--accent-color);
-}
-
-.info-form__btn-conditions {
-  padding: 0;
-  margin-left: 4px;
-  border: none;
-  color: var(--accent-color);
-  text-decoration: underline;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.info-form__button {
-  margin: 0 auto;
 }/*# sourceMappingURL=main.css.map */
