--- a/sass/common/_base.scss
+++ b/sass/common/_base.scss
@@ -40,9 +40,23 @@ img {
 }
 
 .container {
-	width: 1200px;
+	min-width: 320px;
 	padding: 0 15px;
 	margin: 0 auto;
+
+	outline: 1px solid rgba(91, 91, 234, 0.597);
+
+	@media screen and (max-width: 767px) {
+		max-width: 480px;
+	}
+
+	@media screen and (min-width: 768px) {
+		width: 768px;
+	}
+
+	@media screen and (min-width: 1200px) {
+		width: 1200px;
+	}
 }
 
 .section-title {
