--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,11 @@ img {
   margin: 0 auto;
   outline: 1px solid rgba(91, 91, 234, 0.597);
 }
+@media screen and (max-width: 319px) {
+  .container {
+    background-color: aqua;
+  }
+}
 @media screen and (max-width: 767px) {
   .container {
     max-width: 480px;
@@ -329,6 +334,30 @@ img {
   text-align: center;
   font-size: 36px;
   font-weight: 700;
+}
+
+.hero__btn {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  border: none;
+  color: var(--design-white-color);
+  background-color: var(--accent-color);
+  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1.875;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  -webkit-transition: background-color 250ms var(--timing-fn);
+  transition: background-color 250ms var(--timing-fn);
+}
+.hero__btn:hover, .hero__btn:focus {
+  background-color: var(--acc-color-hover);
 }
 
 .logo {
@@ -458,7 +487,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 0;
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
@@ -469,8 +497,12 @@ img {
   color: var(--accent-color);
 }
 @media screen and (max-width: 1199px) {
-  .header-address__link:not(:last-child) {
-    margin-bottom: 8px;
+  .header-address__link:nth-child(1) {
+    margin-bottom: 10px;
+    padding-top: 19px;
+  }
+  .header-address__link:nth-child(2) {
+    padding-bottom: 19px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -488,6 +520,128 @@ img {
 }
 .header-address__link:hover .header-address__icon, .header-address__link:focus .header-address__icon {
   fill: currentColor;
+}
+
+.hero {
+  padding: 118px 0;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 480px;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-size: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+    background-size: 1600px;
+  }
+}
+
+.hero__title {
+  padding: 0 45px;
+  font-size: 26px;
+  text-align: center;
+  line-height: 1.615;
+  font-weight: 900;
+  letter-spacing: 0.06em;
+  color: var(--design-white-color);
+}
+@media screen and (max-width: 479px) {
+  .hero__title {
+    padding: 0 8vw;
+    font-size: 6vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    padding: 0 189px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    padding: 0 237px;
+    font-size: 44px;
+    line-height: 1.364;
+  }
+}
+
+.hero__btn {
+  margin: 30px auto 0;
+}
+
+.advantages {
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .advantages {
+    padding: 94px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .advantages__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .advantages__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages__item {
+    -ms-flex-preferred-size: calc((100% - 90px) / 4);
+        flex-basis: calc((100% - 90px) / 4);
+  }
+}
+
+.advantages__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 120px;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  background-color: var(--bg-color-minor);
+}
+
+.advantages__icon {
+  width: 70px;
+  height: 70px;
+}
+
+.advantages__name {
+  padding-bottom: 10px;
+  font-size: inherit;
+  font-weight: 700;
+}
+
+.advantages__text {
+  line-height: 1.715;
+  color: var(--secondary-color);
 }
 
 .mobmenu__button {
