--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,8 +6,8 @@
 @import './components/logo';
 // @import './components/social';
 @import './layout/header';
-// @import './layout/hero';
-// @import './layout/advantages';
+@import './layout/hero';
+@import './layout/advantages';
 // @import './layout/services';
 // @import './layout/team';
 // @import './layout/clients';
