--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -308,6 +308,11 @@ img {
   margin: 0 auto;
   outline: 1px solid rgba(91, 91, 234, 0.597);
 }
+@media screen and (max-width: 319px) {
+  .container {
+    background-color: aqua;
+  }
+}
 @media screen and (max-width: 767px) {
   .container {
     max-width: 480px;
@@ -533,7 +538,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 0;
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
@@ -544,8 +548,12 @@ img {
   color: var(--accent-color);
 }
 @media screen and (max-width: 1199px) {
-  .header-address__link:not(:last-child) {
-    margin-bottom: 8px;
+  .header-address__link:nth-child(1) {
+    margin-bottom: 10px;
+    padding-top: 19px;
+  }
+  .header-address__link:nth-child(2) {
+    padding-bottom: 19px;
   }
 }
 @media screen and (min-width: 1200px) {
