--- a/sass/common/_base.scss
+++ b/sass/common/_base.scss
@@ -44,6 +44,9 @@ img {
 	padding: 0 15px;
 	margin: 0 auto;
 
+	@media screen and (max-width: 319px) {
+		background-color: aqua;
+	}
 	outline: 1px solid rgba(91, 91, 234, 0.597);
 
 	@media screen and (max-width: 767px) {
