--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,16 +1,32 @@
 .advantages {
-	padding: 94px 0;
+	padding: 60px 0;
+
+	@media screen and (min-width: 1200px) {
+		padding: 94px 0;
+	}
 }
 
 .advantages__list {
-	display: flex;
+	@media screen and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 30px;
+	}
 }
 
 .advantages__item {
-	width: 270px;
+	@media screen and (max-width: 767px) {
+		&:not(:last-child) {
+			margin-bottom: 30px;
+		}
+	}
 
-	&:not(:last-child) {
-		margin-right: 30px;
+	@media screen and (min-width: 768px) {
+		flex-basis: calc((100% - 30px) / 2);
+	}
+
+	@media screen and (min-width: 1200px) {
+		flex-basis: calc((100% - 3 * 30px) / 4);
 	}
 }
 
@@ -18,7 +34,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 270px;
 	height: 120px;
 	border-radius: 4px;
 	margin-bottom: 30px;
