--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -85,7 +85,7 @@
 .header-address__link {
 	display: flex;
 	align-items: center;
-	padding: 10px 0;
+	// padding: 5px 0;
 
 	font-weight: 500;
 	letter-spacing: 0.02em;
@@ -100,8 +100,13 @@
 	}
 
 	@media screen and (max-width: 1199px) {
-		&:not(:last-child) {
-			margin-bottom: 8px;
+		&:nth-child(1) {
+			margin-bottom: 10px;
+			padding-top: 19px;
+		}
+
+		&:nth-child(2) {
+			padding-bottom: 19px;
 		}
 	}
 
