--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,6 @@ img {
   min-width: 320px;
   padding: 0 15px;
   margin: 0 auto;
-  outline: 1px solid rgba(91, 91, 234, 0.597);
 }
 @media screen and (max-width: 319px) {
   .container {
@@ -330,10 +329,18 @@ img {
 }
 
 .section-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
+  line-height: 1.179;
   font-weight: 700;
+}
+@media screen and (min-width: 1200px) {
+  .section-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.167;
+  }
 }
 
 .hero__btn {
@@ -389,6 +396,57 @@ img {
 
 .logo--accent {
   color: var(--accent-color);
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.social--team {
+  width: 206px;
+  margin: 0 auto;
+}
+
+.social__item {
+  width: 44px;
+  height: 44px;
+}
+
+.social__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  color: var(--icon-color);
+  background-color: transparent;
+  -webkit-transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
+  transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
+}
+.social__link:hover, .social__link:focus {
+  color: var(--design-white-color);
+  background-color: var(--accent-color);
+}
+.social__link--footer {
+  color: var(--design-white-color);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social__icon {
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
 }
 
 .header .container {
@@ -641,6 +699,103 @@ img {
 
 .advantages__text {
   line-height: 1.715;
+  color: var(--secondary-color);
+}
+
+.services {
+  padding-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .services {
+    display: none;
+  }
+}
+
+.services__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.services__item {
+  position: relative;
+}
+.services__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.services__desc {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 370px;
+  height: 70px;
+  padding: 27px 0;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.services__subject {
+  color: var(--design-white-color);
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.team {
+  padding: 60px 0;
+  background: var(--bg-color-minor);
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding: 94px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+
+.team__item {
+  padding-bottom: 24px;
+  border-radius: 0 0 4px 4px;
+  background-color: var(--design-white-color);
+  -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: 270px;
+    padding-bottom: 30px;
+  }
+}
+
+.team__img {
+  width: 100%;
+}
+
+.team__name {
+  margin: 30px 0 10px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.team__desc {
+  margin-bottom: 16px;
+  text-align: center;
+  font-size: 16px;
   color: var(--secondary-color);
 }
 
