--- a/sass/common/_base.scss
+++ b/sass/common/_base.scss
@@ -47,7 +47,6 @@ img {
 	@media screen and (max-width: 319px) {
 		background-color: aqua;
 	}
-	outline: 1px solid rgba(91, 91, 234, 0.597);
 
 	@media screen and (max-width: 767px) {
 		max-width: 480px;
@@ -63,9 +62,17 @@ img {
 }
 
 .section-title {
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 
 	text-align: center;
-	font-size: 36px;
+	font-size: 28px;
+	line-height: 1.179;
 	font-weight: 700;
+
+	@media screen and (min-width: 1200px) {
+		margin-bottom: 50px;
+
+		font-size: 36px;
+		line-height: 1.167;
+	}
 }
