--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,12 +4,12 @@
 @import './common/base';
 @import './utils/placeholders';
 @import './components/logo';
-// @import './components/social';
+@import './components/social';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/advantages';
-// @import './layout/services';
-// @import './layout/team';
+@import './layout/services';
+@import './layout/team';
 // @import './layout/clients';
 // @import './layout/footer';
 // @import './layout/modal';
